docs: add documentation for updateOpening
