# docs/swagger.json
@@ -5,8 +5,8 @@
     },
     "paths": {
         "/opening": {
-            "get": {
-                "description": "Show a job opening",
+            "put": {
+                "description": "Update a job opening",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,7 +16,7 @@
                 "tags": [
                     "Openings"
                 ],
-                "summary": "Show opening",
+                "summary": "Update opening",
                 "parameters": [
                     {
                         "type": "string",
@@ -24,13 +24,22 @@
                         "name": "id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "Opening data to Update",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.UpdateOpeningRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ShowOpeningResponse"
+                            "$ref": "#/definitions/handler.UpdateOpeningResponse"
                         }
                     },
                     "400": {
@@ -41,6 +50,12 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -136,7 +151,7 @@
         },
         "/openings": {
             "get": {
-                "description": "List all job openings",
+                "description": "Show a job opening",
                 "consumes": [
                     "application/json"
                 ],
@@ -146,16 +161,31 @@
                 "tags": [
                     "Openings"
                 ],
-                "summary": "List openings",
+                "summary": "Show opening",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Opening identification",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ListOpeningsResponse"
+                            "$ref": "#/definitions/handler.ShowOpeningResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -236,6 +266,40 @@
             }
         },
         "handler.ShowOpeningResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.OpeningResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.UpdateOpeningRequest": {
+            "type": "object",
+            "properties": {
+                "company": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "remote": {
+                    "type": "boolean"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "salary": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.UpdateOpeningResponse": {
             "type": "object",
             "properties": {
                 "data": {
